Correct issues with unit test output